test/Fail/Issue2057.err
Issue2057.agda:18.20-21: error: [UnequalTerms]
(x₁ : _A_9) → P x₁ !=< P x
when checking that the expression p has type P x
